# n4d-qt-agent

./: Agent.py  CMakeLists.txt  EdupalsN4DAgentConfig.cmake  setup.py  test.py  test.qml
debian/: changelog  control  copyright  libedupals-n4d-agent-dev.dirs  libedupals-n4d-agent-dev.install  qml-module-edupals-n4d-agent.install
examples/pyside/: main.py  view.qml
lib/: CMakeLists.txt  agent.cpp  agent.hpp  testing.cpp
locale/: ca@valencia.po  es.po  messages.pot
n4d/agent/: __init__.py
qml/: CMakeLists.txt  Login.qml  plugin.cpp  plugin.h  qmldir
rsrc/: login.qml  resources.qrc
src/: CMakeLists.txt  agent.cpp  locale.hpp  loginwindow.cpp  loginwindow.hpp
